# PlomerSwiftSdk/Classes/OpenAPIs/APIs/ResponseTimesAPI.swift
@@ -1,0 +1,72 @@
+//
+// ResponseTimesAPI.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+#if canImport(AnyCodable)
+import AnyCodable
+#endif
+
+open class ResponseTimesAPI {
+
+    /**
+     Get response times
+     
+     - parameter monitoringProfileId: (query)  
+     - parameter limit: (query)  (optional, default to 10)
+     - parameter page: (query)  (optional, default to 0)
+     - parameter apiResponseQueue: The queue on which api response is dispatched.
+     - parameter completion: completion handler to receive the result
+     */
+    @discardableResult
+    open class func getResponseTimes(monitoringProfileId: Int, limit: Double? = nil, page: Double? = nil, apiResponseQueue: DispatchQueue = PlomerSwiftSdkAPI.apiResponseQueue, completion: @escaping ((_ result: Swift.Result<GetResponseTimes200Response, ErrorResponse>) -> Void)) -> RequestTask {
+        return getResponseTimesWithRequestBuilder(monitoringProfileId: monitoringProfileId, limit: limit, page: page).execute(apiResponseQueue) { result in
+            switch result {
+            case let .success(response):
+                completion(.success(response.body))
+            case let .failure(error):
+                completion(.failure(error))
+            }
+        }
+    }
+
+    /**
+     Get response times
+     - GET /response-times
+     - API Key:
+       - type: apiKey ApiKey (HEADER)
+       - name: apiKey
+     - Bearer Token:
+       - type: http
+       - name: bearerAuth
+     - parameter monitoringProfileId: (query)  
+     - parameter limit: (query)  (optional, default to 10)
+     - parameter page: (query)  (optional, default to 0)
+     - returns: RequestBuilder<GetResponseTimes200Response> 
+     */
+    open class func getResponseTimesWithRequestBuilder(monitoringProfileId: Int, limit: Double? = nil, page: Double? = nil) -> RequestBuilder<GetResponseTimes200Response> {
+        let localVariablePath = "/response-times"
+        let localVariableURLString = PlomerSwiftSdkAPI.basePath + localVariablePath
+        let localVariableParameters: [String: Any]? = nil
+
+        var localVariableUrlComponents = URLComponents(string: localVariableURLString)
+        localVariableUrlComponents?.queryItems = APIHelper.mapValuesToQueryItems([
+            "limit": (wrappedValue: limit?.encodeToJSON(), isExplode: true),
+            "page": (wrappedValue: page?.encodeToJSON(), isExplode: true),
+            "monitoringProfileId": (wrappedValue: monitoringProfileId.encodeToJSON(), isExplode: true),
+        ])
+
+        let localVariableNillableHeaders: [String: Any?] = [
+            :
+        ]
+
+        let localVariableHeaderParameters = APIHelper.rejectNilHeaders(localVariableNillableHeaders)
+
+        let localVariableRequestBuilder: RequestBuilder<GetResponseTimes200Response>.Type = PlomerSwiftSdkAPI.requestBuilderFactory.getBuilder()
+
+        return localVariableRequestBuilder.init(method: "GET", URLString: (localVariableUrlComponents?.string ?? localVariableURLString), parameters: localVariableParameters, headers: localVariableHeaderParameters, requiresAuthentication: true)
+    }
+}
