# PlomerSwiftSdk/Classes/OpenAPIs/Models/Collection.swift
@@ -51,3 +51,6 @@ public struct Collection: Codable, JSONEncodable, Hashable {
     }
 }
 
+
+@available(iOS 13, tvOS 13, watchOS 6, macOS 10.15, *)
+extension Collection: Identifiable {}
