# PlomerSwiftSdk/Classes/OpenAPIs/Models/MonitoringProfile.swift
@@ -115,3 +115,6 @@ public struct MonitoringProfile: Codable, JSONEncodable, Hashable {
     }
 }
 
+
+@available(iOS 13, tvOS 13, watchOS 6, macOS 10.15, *)
+extension MonitoringProfile: Identifiable {}
